--- a/index.html
+++ b/index.html
@@ -3,3 +3,34 @@
     13 ~ 999
     2/22/2023
 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scaling Guacamole</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <header>
+        <h1>Scaling Guacamole</h1>
+    </header>
+    <main>
+        <div class="Buttondiv">
+            <button>Launch</button>
+        </div>
+            <section>
+            <h2>Output Results:</h2>
+            <p class="outputToHtml"></p>
+        </section>
+    </main>
+    <footer>
+        <span>Developed By: MidActionJax | 999 </span>
+        <div class="spandiv">
+            <span class="FooterSpan">Scaling Guacamole</span>
+        </div>
+            <p> &copy; Copyright 2023 Scaling Guacamole</p>
+    </footer>
+</body>
+</html>
