--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </header>
         <main>
             <div class="Buttondiv">
-                <button>Launch</button>
+                <button onclick="getResults()">Launch</button>
             </div>
                 <section>
                 <h2>Output Results:</h2>
